Working on he homepage layout.

--- a/about.html
+++ b/about.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
-<!-- Website created by Les Warren -->
+<!-- saved from url=(0043)http://getbootstrap.com/examples/offcanvas/ -->
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico">
 
-    <title>Lost Pines Artisans Alliance - Smithville, Texas</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="img/favicon.ico">
 
-    <!-- Bootstrap core CSS -->
-    <link href='https://fonts.googleapis.com/css?family=Cabin:400,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Lost Pines Artisans Alliance - Smithville, Texas</title>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="dist/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href='https://fonts.googleapis.com/css?family=Cabin:400,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="dist/css/offcanvas.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="dist/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <script src="dist/js/ie-emulation-modes-warning.js"></script>
+  <!-- Custom styles for this template -->
+  <link href="dist/css/offcanvas.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  <script src="dist/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
 <script>function inject(){function a(){function a(a){parent.postMessage({type:"blockedWindow",args:JSON.stringify(a)},l)}function b(a){var b=a[1];return null!=b&&["_blank","_parent","_self","_top"].indexOf(b)<0?b:null}function e(a,b){var c;for(c in a)try{void 0===b[c]&&(b[c]=a[c])}catch(d){}return b}var g=arguments,h=!0,j=null,k=null;if(null!=window.event&&(k=window.event.currentTarget),null==k){for(var m=g.callee;null!=m.arguments&&null!=m.arguments.callee.caller;)m=m.arguments.callee.caller;null!=m.arguments&&m.arguments.length>0&&null!=m.arguments[0].currentTarget&&(k=m.arguments[0].currentTarget)}null!=k&&(k instanceof Window||k===document||null!=k.URL&&null!=k.body||null!=k.nodeName&&("body"==k.nodeName.toLowerCase()||"#document"==k.nodeName.toLowerCase()))?(window.pbreason="Blocked a new window opened with URL: "+g[0]+" because it was triggered by the "+k.nodeName+" element",h=!1):h=!0;document.webkitFullscreenElement||document.mozFullscreenElement||document.fullscreenElement;if(((new Date).getTime()-d<1e3||isNaN(d)&&c())&&(window.pbreason="Blocked a new window opened with URL: "+g[0]+" because a full screen was just initiated while opening this url.",document.exitFullscreen?document.exitFullscreen():document.mozCancelFullScreen?document.mozCancelFullScreen():document.webkitCancelFullScreen&&document.webkitCancelFullScreen(),h=!1),1==h){j=f.apply(this,g);var n=b(g);if(null!=n&&(i[n]=j),j!==window){var o=(new Date).getTime(),p=j.blur;j.blur=function(){(new Date).getTime()-o<1e3?(window.pbreason="Blocked a new window opened with URL: "+g[0]+" because a it was blured",j.close(),a(g)):p()}}}else{var q={href:g[0]};q.replace=function(a){q.href=a},j={close:function(){return!0},test:function(){return!0},blur:function(){return!0},focus:function(){return!0},showModelessDialog:function(){return!0},showModalDialog:function(){return!0},prompt:function(){return!0},confirm:function(){return!0},alert:function(){return!0},moveTo:function(){return!0},moveBy:function(){return!0},resizeTo:function(){return!0},resizeBy:function(){return!0},scrollBy:function(){return!0},scrollTo:function(){return!0},getSelection:function(){return!0},onunload:function(){return!0},print:function(){return!0},open:function(){return this},opener:window,closed:!1,innerHeight:480,innerWidth:640,name:g[1],location:q,document:{location:q}},e(window,j),j.window=j;var n=b(g);if(null!=n)try{i[n].close()}catch(r){}setTimeout(function(){var b;b=j.location instanceof Object?j.document.location instanceof Object?null!=q.href?q.href:g[0]:j.document.location:j.location,g[0]=b,a(g)},100)}return j}function b(a){d=a?(new Date).getTime():0/0}function c(){return document.fullScreenElement&&null!==document.fullScreenElement||null!=document.mozFullscreenElement||null!=document.webkitFullscreenElement}var d,e="originalOpenFunction",f=window.open,g=document.createElement,h=document.createEvent,i={},j=0,k=null,l=window.location!=window.parent.location?document.referrer:document.location;window[e]=window.open,window.open=function(){try{return a.apply(this,arguments)}catch(b){return null}},document.createElement=function(){var a=g.apply(document,arguments);if("a"==arguments[0]||"A"==arguments[0]){j=(new Date).getTime();var b=a.dispatchEvent;a.dispatchEvent=function(c){return null!=c.type&&"click"==(""+c.type).toLocaleLowerCase()?(window.pbreason="blocked due to an explicit dispatchEvent event with type 'click' on an 'a' tag",parent.postMessage({type:"blockedWindow",args:JSON.stringify({0:a.href})},l),!0):b(c)},k=a}return a},document.createEvent=function(){try{return arguments[0].toLowerCase().indexOf("mouse")>=0&&(new Date).getTime()-j<=50?(window.pbreason="Blocked because 'a' element was recently created and "+arguments[0]+" event was created shortly after",arguments[0]=k.href,parent.postMessage({type:"blockedWindow",args:JSON.stringify({0:k.href})},l),null):h.apply(document,arguments)}catch(a){}},document.addEventListener("fullscreenchange",function(){b(document.fullscreen)},!1),document.addEventListener("mozfullscreenchange",function(){b(document.mozFullScreen)},!1),document.addEventListener("webkitfullscreenchange",function(){b(document.webkitIsFullScreen)},!1)} inject()</script>
 
   <body cz-shortcut-listen="true">
-    <nav class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">More LInks</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="http://lostpinesartisansalliance.org"><img src="img/logo_img.png" alt="Lost Pines Artisans Alliance" /></a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="http://lospinesartisansalliance.org/index.html">Home</a></li>
-            <li><a href="about.html">About LPAA</a></li>
-            <li><a href="events.html">Events/Classes</a></li>
-            <li><a href="join.html">Join/Donate</a></li>
-            <li><a href="contact.html">Contact/Member Links</a></li>
-          </ul>
-        </div><!-- /.nav-collapse -->
-      </div><!-- /.container -->
-    </nav><!-- /.navbar -->
+  <nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="http://lostpinesartisansalliance.org"><img src="img/logo_img.png" alt="Lost Pines Artisans Alliance" /></a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="http://lospinesartisansalliance.org/index.html">Home</a></li>
+          <li class="active"><a href="#">About LPAA</a></li>
+          <li><a href="events.html">Events/Classes</a></li>
+          <li><a href="join.html">Join/Donate</a></li>
+          <li><a href="contact.html">Contact/Member Links</a></li>
+        </ul>
+      </div><!-- /.nav-collapse -->
+    </div><!-- /.container -->
+  </nav><!-- /.navbar -->
 
     <div class="container">
 
@@ -66,58 +66,52 @@
           <p class="pull-right visible-xs">
             <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
           </p>
-          <div class="jumbotron frontpage">
-            <h1>Lost Pines Artisans Alliance</h1>
-            <p>Smithville, Texas</p>
-          </div>
           <div class="row">
-            <div class="col-xs-12 col-md-8">
-                  <h2>LPAA Gallery on Main</h2>
-                  <p>206 Main Street</p>
-              <p><strong>LPAA Gallery on Main/Visitor Center Hours:<br>
-                Friday 1:30-5pm ~ Saturday 10am-5pm ~ Sunday 1:30-5pm</strong></p>
-              <article>
-                  <h3>"Springtime in Texas"</h3>
-                <div class="pull-left right-offset-10">
-                  <img src="img/RainyDayinSpring_web.jpg" alt="Rainy Day in Spring by Robin Lively"/>
-                  <figcaption><em>"Rainy Day in Spring" by Robin Lively</em></figcaption>
-                </div>
-                  <p>Opening Reception - Saturday April 9 at 2pm.  We will also be open that date until 9pm to coincide with an opening reception at Mosaic Art & Home featuring Marcela Foutel</p>
-                  <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#index.html" role="button">View details »</a></p>
-              </article>
-            </div><!--.col-xs-12. col-md-8-->
+            <div class="col-xs-6 col-lg-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#" role="button">View details »</a></p>
+            </div><!--/.col-xs-6.col-lg-4-->
+            <div class="col-xs-6 col-lg-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#" role="button">View details »</a></p>
+            </div><!--/.col-xs-6.col-lg-4-->
+            <div class="col-xs-6 col-lg-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#" role="button">View details »</a></p>
+            </div><!--/.col-xs-6.col-lg-4-->
+            <div class="col-xs-6 col-lg-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#" role="button">View details »</a></p>
+            </div><!--/.col-xs-6.col-lg-4-->
+            <div class="col-xs-6 col-lg-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#" role="button">View details »</a></p>
+            </div><!--/.col-xs-6.col-lg-4-->
+            <div class="col-xs-6 col-lg-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#" role="button">View details »</a></p>
+            </div><!--/.col-xs-6.col-lg-4-->
           </div><!--/row-->
-          <div class="row">
-            <div class="col-xs-6 col-lg-4">
-              <h3>Heading</h3>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#index.html" role="button">View details »</a></p>
-            </div><!--/.col-xs-6.col-lg-4-->
-            <div class="col-xs-6 col-lg-4">
-              <h3>Heading</h3>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#index.html" role="button">View details »</a></p>
-            </div><!--/.col-xs-6.col-lg-4-->
-            <div class="col-xs-6 col-lg-4">
-              <h3>Heading</h3>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#index.html" role="button">View details »</a></p>
-            </div><!--/.col-xs-6.col-lg-4-->
-          </div>
         </div><!--/.col-xs-12.col-sm-9-->
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item active">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
-            <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item active">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
+            <a href="http://getbootstrap.com/examples/offcanvas/#" class="list-group-item">Link</a>
           </div>
         </div><!--/.sidebar-offcanvas-->
       </div><!--/row-->
@@ -125,14 +119,7 @@
       <hr>
 
       <footer>
-        <div class="row">
-          <div class="col-xs-12 col-md-6">
-        <p>© 20156 Lost Pines Artisans Alliance.</p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <p>The Lost Pines Artisans Alliance is a 501(c)(3) non-profit.</p>
-          </div>
-        </div>
+        <p>© 2015 Company, Inc.</p>
       </footer>
 
     </div><!--/.container-->
@@ -141,12 +128,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../../Web%20Templates/OffCanvas/OffCanvas_files/jquery.min.js"></script>
+    <script src="./Off Canvas Template for Bootstrap_files/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../Web%20Templates/OffCanvas/OffCanvas_files/bootstrap.min.js"></script>
+    <script src="./Off Canvas Template for Bootstrap_files/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="dist/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="dist/js/offcanvas.js"></script>
+    <script src="./Off Canvas Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
+    <script src="./Off Canvas Template for Bootstrap_files/offcanvas.js"></script>
   
 
 </body></html>
