--- a/index.html
+++ b/index.html
@@ -71,27 +71,54 @@
             <p>Smithville, Texas</p>
           </div>
           <div class="row">
-            <div class="col-xs-12 col-md-8">
+            <div class="col-xs-12 col-md-6">
                   <h2>LPAA Gallery on Main</h2>
                   <p>206 Main Street</p>
               <p><strong>LPAA Gallery on Main/Visitor Center Hours:<br>
                 Friday 1:30-5pm ~ Saturday 10am-5pm ~ Sunday 1:30-5pm</strong></p>
               <article>
-                  <h3>"Springtime in Texas"</h3>
-                <div class="pull-left right-offset-10">
+                <h3>"Springtime in Texas"</h3>
+                <figure>
                   <img src="img/RainyDayinSpring_web.jpg" alt="Rainy Day in Spring by Robin Lively"/>
                   <figcaption><em>"Rainy Day in Spring" by Robin Lively</em></figcaption>
-                </div>
-                  <p>Opening Reception - Saturday April 9 at 2pm.  We will also be open that date until 9pm to coincide with an opening reception at Mosaic Art & Home featuring Marcela Foutel</p>
-                  <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#index.html" role="button">View details »</a></p>
+                </figure>
+                <p>Opening Reception - Saturday April 9 at 2pm.  We will also be open that date until 9pm to coincide with an opening reception at Mosaic Art & Home featuring Marcela Foutel</p>
+                <p><a class="btn btn-default" href="events.html" role="button">View details »</a></p>
               </article>
-            </div><!--.col-xs-12. col-md-8-->
+            </div><!--.col-xs-12. col-md-12-->
+            <div class="col-xs-12 col-md-6">
+              <h2>Mary Nichols Art Center</h2>
+              <p>301 Burleson Street</p>
+              <p><strong>Scheduled classes and workshops for artists of all ages and levels.<br>
+                Visit our <a href="events.html">Events and Classes Page </a>for more information.</strong></p>
+              <article>
+                <h3>Classes and Workshops</h3>
+                <figure>
+                  <img src="img/Enid%20Wood.jpeg" alt="Enid Wood Teaching at the Mary Nichols Art Center" style="width:172px; margin: 0 auto"/>
+                  <figcaption><em>Enid Wood teaching workshops at the Mary Nichols Art Center</em></figcaption>
+                </figure>
+                <p>Enid Wood has been teaching workshops at the Mary Nichols Art Center, 301 Burleson, on Saturdays from 1:00 to 4:00. Watch this spot for updates. Contact Enid directly for details.
+                  Enid's Website
+                  Each workshop costs $30 (or $25 per class if paying for an entire series in advance).
+                  This cost includes paper. Please bring your
+                  own foam core drawing board, portable easel (optional), and 72 half stick Faber Castell
+                  pastels, or 60 Stabilo pastel pencils.</p>
+                <p><a class="btn btn-default" href="events.html" role="button">View details »</a></p>
+              </article>
+            </div><!--.col-xs-12. col-md-12-->
           </div><!--/row-->
+
           <div class="row">
             <div class="col-xs-6 col-lg-4">
-              <h3>Heading</h3>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-default" href="http://getbootstrap.com/examples/offcanvas/#index.html" role="button">View details »</a></p>
+              <h3>Smithville Cultural District</h3>
+              <p><span class="feature"> Home of the Richard D. Latham Cultural District of Smithville, Texas <br></span> Smithville was named a
+                Cultural District in 2013 by the
+                Texas Commission on the Arts.
+                A brand new website is in the works
+                which will include maps, interactive
+                media and videos. Smithville
+                is bursting with artists!</p>
+              <p><a class="btn btn-default" href="http://www.smithvilleculturaldistrict.com/" role="button">View details »</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-xs-6 col-lg-4">
               <h3>Heading</h3>
@@ -119,6 +146,10 @@
             <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
             <a href="http://getbootstrap.com/examples/offcanvas/#index.html" class="list-group-item">Link</a>
           </div>
+
+          <figure>
+            <img src="img/RibbonCutting_CulturalDistrict_7108_FH.jpg" alt="Richard Latham Cultural District" style="width: 100%" />
+          </figure>
         </div><!--/.sidebar-offcanvas-->
       </div><!--/row-->
 
