Tweaks on the layout and fonts, adding content.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           <div class="row">
             <div class="col-xs-6 col-lg-4">
               <h3>Smithville Cultural District</h3>
+              <article>
               <p><span class="feature"> Home of the Richard D. Latham Cultural District of Smithville, Texas <br></span> Smithville was named a
                 Cultural District in 2013 by the
                 Texas Commission on the Arts.
@@ -118,6 +119,8 @@
                 which will include maps, interactive
                 media and videos. Smithville
                 is bursting with artists!</p>
+                <img src="img/logos.png" alt="The Smithville Cultural District"/>
+              </article>
               <p><a class="btn btn-default" href="http://www.smithvilleculturaldistrict.com/" role="button">View details »</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-xs-6 col-lg-4">
